Add README and LICENSE

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
         <li><input type='checkbox' disabled> Move the canvas around by dragging.</li>
         <li><input type='checkbox' disabled> Make website pretty.</li>
       </ul>
+
+      <p>Code available at: <a href="https://github.com/silwalanish/bezier-curve" target="blank">GitHub</a></p>
     </div>
     <div class="canvas-cont" id="visualization"></div>
   </div>
