Add links to the algorithm and video about Bezier curves.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="container">
     <div class="help-text">
       <h3>Welcome to the magical world of <a href="https://en.wikipedia.org/wiki/B%C3%A9zier_curve" target="blank">Bézier curve</a>.</h3>
+      <p>The Bézier curves are drawn using the <a href="https://en.wikipedia.org/wiki/De_Casteljau%27s_algorithm" target="blank">De Casteljau's algorithm</a>.</p>
       <p>
         Use Bézier curve to draw cool images.
         <ul type="square">
@@ -38,33 +39,11 @@
         <u>Note: Deselect the selected curve to select another curve.</u>
       </p>
 
-      <h4>Features:</h4>
-      <ul>
-        <li><input type='checkbox' disabled checked> Add curve.</li>
-        <li><input type='checkbox' disabled checked> Remove curve.</li>
-        <li><input type='checkbox' disabled checked> Select single curve.</li>
-        <li><input type='checkbox' disabled checked> Deselect curve.</li>
-        <li><input type='checkbox' disabled checked> Add control points.</li>
-        <li><input type='checkbox' disabled checked> Move control points.</li>
-        <li><input type='checkbox' disabled checked> Remove control points.</li>
-        <li><input type='checkbox' disabled checked> Select single control point.</li>
-        <li><input type='checkbox' disabled checked> Deselect control point.</li>
-        <li><input type='checkbox' disabled> Save the picture as image.</li>
-        <li><input type='checkbox' disabled> Copy the picture to clipboard as image.</li>
-        <li><input type='checkbox' disabled> Export the picture as SVG.</li>
-        <li><input type='checkbox' disabled> Color picker for curve.</li>
-        <li><input type='checkbox' disabled> Select multiple curves with CTRL+click.</li>
-        <li><input type='checkbox' disabled> Select multiple curves using selection rectangle.</li>
-        <li><input type='checkbox' disabled> Select multiple control points with CTRL+click.</li>
-        <li><input type='checkbox' disabled> Select multiple control points using selection rectangle.</li>
-        <li><input type='checkbox' disabled> Move/Remove the selected curves.</li>
-        <li><input type='checkbox' disabled> Move/Remove the selected control points.</li>
-        <li><input type='checkbox' disabled> Zoom in and out in the canvas.</li>
-        <li><input type='checkbox' disabled> Move the canvas around by dragging.</li>
-        <li><input type='checkbox' disabled> Make website pretty.</li>
-      </ul>
-
       <p>Code available at: <a href="https://github.com/silwalanish/bezier-curve" target="blank">GitHub</a></p>
+
+      <h3>Learn More About Bézier curve:</h3>
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/aVwxzDHniEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p>Video: The Beauty of Bézier Curves - Freya Holmer</p>
     </div>
     <div class="canvas-cont" id="visualization"></div>
   </div>
